tests/snapshots/snapshots__factorial_assembly.snap
---
source: tests/snapshots.rs
expression: disasm(&bytecode)
---
PUSH1 5
PUSH1 1
SWAP1
[5:] JUMPDEST
DUP1
PUSH2 13
JUMPI
POP
STOP
[13:] JUMPDEST
PUSH1 1
DUP2
SUB
SWAP1
SWAP1
SWAP2
MUL
SWAP1
PUSH2 5
JUMP
