tests/snapshots/snapshots__fib_assembly.snap
---
source: tests/snapshots.rs
expression: disasm(&bytecode)
---
PUSH1 9
PUSH2 10
SWAP1
PUSH2 12
JUMP
[10:] JUMPDEST
STOP
[12:] JUMPDEST
PUSH1 2
DUP2
LT
PUSH2 52
JUMPI
PUSH1 1
DUP2
SUB
PUSH2 33
SWAP1
PUSH2 12
JUMP
[33:] JUMPDEST
PUSH1 2
SWAP1
SWAP2
SUB
PUSH2 47
SWAP1
PUSH2 12
JUMP
[47:] JUMPDEST
SWAP1
ADD
SWAP1
JUMP
[52:] JUMPDEST
SWAP1
JUMP
