tests/snapshots/snapshots__gcd_assembly.snap
---
source: tests/snapshots.rs
expression: disasm(&bytecode)
---
PUSH2 270
PUSH1 192
PUSH2 15
SWAP2
SWAP1
SWAP1
PUSH2 17
JUMP
[15:] JUMPDEST
STOP
[17:] JUMPDEST
PUSH0
DUP2
EQ
PUSH2 156
JUMPI
PUSH0
DUP3
EQ
PUSH2 151
JUMPI
PUSH1 1
DUP2
AND
PUSH0
SWAP1
EQ
PUSH1 1
DUP4
AND
PUSH0
SWAP1
EQ
SWAP1
PUSH2 104
JUMPI
PUSH2 92
JUMPI
DUP2
DUP2
GT
PUSH2 77
JUMPI
PUSH1 1
DUP2
SWAP1
SWAP3
SUB
SWAP1
SWAP2
SHR
SWAP1
SWAP1
PUSH2 17
JUMP
[77:] JUMPDEST
PUSH1 1
DUP3
SWAP1
SWAP2
SUB
SWAP1
SHR
SWAP1
SWAP1
PUSH2 17
JUMP
[92:] JUMPDEST
PUSH1 1
SWAP2
SWAP1
SWAP2
SHR
SWAP1
PUSH2 17
JUMP
[104:] JUMPDEST
PUSH2 120
JUMPI
PUSH1 1
SWAP1
SWAP1
SHR
SWAP1
SWAP1
PUSH2 17
JUMP
[120:] JUMPDEST
PUSH1 1
PUSH1 1
SWAP2
SWAP1
SWAP2
SHR
PUSH1 1
SWAP3
SWAP1
SWAP3
SHR
PUSH2 146
SWAP2
SWAP1
SWAP1
SWAP3
PUSH2 17
JUMP
[146:] JUMPDEST
SWAP1
SHL
SWAP1
JUMP
[151:] JUMPDEST
SWAP1
POP
SWAP1
JUMP
[156:] JUMPDEST
POP
SWAP1
JUMP
