tests/snapshots/snapshots__muldiv_assembly.snap
---
source: tests/snapshots.rs
expression: disasm(&bytecode)
---
PUSH17 340282366920938463463374607431768211579
PUSH17 340282366920938463463374607431768211501
PUSH1 5
PUSH2 49
SWAP3
SWAP1
SWAP2
SWAP1
PUSH2 51
JUMP
[49:] JUMPDEST
STOP
[51:] JUMPDEST
PUSH0
NOT
DUP3
DUP3
MULMOD
DUP3
DUP3
MUL
DUP1
DUP3
LT
DUP2
SWAP1
SWAP3
SUB
SWAP2
SWAP1
SWAP2
SUB
PUSH0
DUP2
EQ
PUSH2 213
JUMPI
DUP1
DUP6
GT
PUSH2 94
JUMPI
PUSH0
SWAP5
POP
POP
POP
POP
POP
SWAP1
JUMP
[94:] JUMPDEST
DUP5
SWAP2
SWAP4
SWAP1
SWAP3
MULMOD
DUP3
DUP2
GT
SWAP1
SWAP2
SUB
SWAP1
SWAP1
SWAP2
SUB
PUSH0
DUP4
SWAP1
SUB
DUP4
AND
DUP1
SWAP1
SWAP4
DIV
DUP4
SWAP1
SWAP2
DIV
PUSH0
DUP5
SWAP1
SUB
SWAP4
SWAP1
SWAP4
DIV
PUSH1 1
SWAP1
ADD
SWAP1
SWAP2
MUL
SWAP1
SWAP2
OR
PUSH1 3
DUP3
SWAP1
MUL
PUSH1 2
SWAP1
XOR
PUSH1 2
DUP2
DUP5
MUL
SWAP1
SUB
SWAP1
MUL
PUSH1 2
DUP2
DUP5
MUL
SWAP1
SUB
SWAP1
MUL
PUSH1 2
DUP2
DUP5
MUL
SWAP1
SUB
SWAP1
MUL
PUSH1 2
DUP2
DUP5
MUL
SWAP1
SUB
SWAP1
MUL
PUSH1 2
DUP2
DUP5
MUL
SWAP1
SUB
SWAP1
MUL
PUSH1 2
DUP2
SWAP1
SWAP4
MUL
SWAP1
SWAP3
SUB
SWAP1
SWAP2
MUL
SWAP1
MUL
SWAP1
JUMP
[213:] JUMPDEST
SWAP4
SWAP1
DIV
SWAP3
POP
POP
POP
SWAP1
JUMP
