tests/snapshots/snapshots__muldiv_stack.snap
---
source: tests/snapshots.rs
expression: stack
---
- "0x33333333333333333333333333333354ccccccccccccccccccccccccccccd11f"
