tests/snapshots/snapshots__spill_assembly.snap
---
source: tests/snapshots.rs
expression: disasm(&bytecode)
---
PUSH1 1
PUSH0
MLOAD
SWAP1
PUSH0
MSTORE
PUSH1 2
PUSH1 3
PUSH1 4
PUSH1 5
PUSH1 6
PUSH1 7
PUSH1 8
PUSH1 9
PUSH1 10
PUSH1 11
PUSH1 12
PUSH1 13
PUSH1 14
PUSH1 15
PUSH1 16
PUSH1 17
PUSH1 18
PUSH0
MLOAD
SWAP1
PUSH0
MSTORE
SWAP15
SWAP1
SWAP16
ADD
POP
POP
POP
POP
POP
POP
POP
POP
POP
POP
POP
POP
POP
POP
SWAP2
PUSH0
MSTORE
POP
STOP
